# ska-mid-cbf-fhs-system-tests

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  CODEOWNERS  Makefile  README.md  pyproject.toml  pytest.ini
.gitlab/ci/: common.gitlab-ci.yml  mid-itf.gitlab-ci.yml  mid-k8s.gitlab-ci.yml
charts/ska-mid-cbf-fhs-system-tests/: Chart.yaml  values.yaml
charts/ska-mid-cbf-system-tests/: Chart.yaml
log_utils/: README.md  log_analysis.py  log_level_summary.sh  query.yaml  requirements.txt
test_parameters/: configure_scan.json  configure_scan_invalid_schema_mismatch.json  configure_scan_invalid_wrong_num_gains.json  configure_scan_valid_1.json  configure_scan_valid_1_changed_dish_id.json  configure_scan_valid_2.json  configure_scan_valid_3.json  configure_scan_valid_4.json  configure_scan_valid_5.json  configure_scan_valid_6.json  injection_change_dish_id_1.json  injection_change_sample_rate_1.json  injection_reset_dish_id_1.json  injection_reset_registers_1.json
tests/: base_tango_test_class.py  conftest.py  connection_utils.py  proxy_utils.py  pytango_client_wrapper.py  scan_utils.py  test_basic_test.py
tests/deployment/: test_init_deployment.py
tests/features/: basic_test.feature
tests/h1/: test_deployment.py  test_happy_path.py  test_scan_sequence.py
